[package]
name = "http-misc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0.216", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true        # Strip symbols from binary*
opt-level = "z"  # 最小化二进制文件大小

[target.x86_64-unknown-linux-musl]
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "relocation-model=static"
]